fix: overflow x

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 
 html {
   scroll-behavior: smooth;
+  @apply overflow-x-hidden;
 }
 
 body {
